# FastAPI_ecommerce

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  start_project.sh
app/: Dockerfile  Dockerfile.prod  auth.py  config.py  database.py  log.py  main.py
app/configs/: celery_app.py
app/depends/: db_depends.py
app/migration/: env.py
app/migration/versions/: 2025_10_16_1709-06bcb57a49b4_create_categories_and_products_tables.py
app/migrations/: env.py
app/migrations/versions/: 0537cdf07c6d_create_search_vector.py  1f0663a24fe1_add_review_model.py  2f29c6346272_add_user_model.py  4c96b8281de0_add_orders_and_order_items.py  eaaad6e15eff_initial_migration_for_postgresql.py  f7bdb6e7804a_create_cart.py
app/models/: __init__.py  cart_items.py  categories.py  orders.py  products.py  reviews.py  users.py
app/routers/: carts.py  categories.py  orders.py  products.py  reviews.py  users.py
app/schemas/: carts.py  categories.py  orders.py  products.py  reviews.py  users.py
app/tasks/: __init__.py  task.py
app/utils/: utils.py
lesson_material/: SQLAlchemy_method_lesson.py
