[build-system]
requires = ["wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-project"
version = "0.1.0"
description = "your_description"
authors = [{ name = "your_name", email = "your_email@example.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["venv", ".venv", "alembic", "docker", ".git", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ASYNC",# asyncio
]
ignore = ["E203", "E266", "E501", "B008"]

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    '\.venv',
    'venv',
    '__pycache__',
    'alembic',
]
